Fixed readmore visiblity

--- a/portfolio/css/responsive.css
+++ b/portfolio/css/responsive.css
@@ -63,7 +63,7 @@
   display: none;
 }
 
-button {
+.readmore {
   display: block;
 }
 
